# EasyCLI

./: .gitignore  README.md  README_CN.md  forge.config.js  login.html  main.js  package-lock.json  package.json  settings.html
.github/workflows/: build-darwin-arm64.yml  release.yml
css/: login.css  settings.css
images/: icon.icns
js/: config-manager.js  login.js  settings-access-token.js  settings-api-keys.js  settings-auth-antigravity.js  settings-auth-claude.js  settings-auth-codex.js  settings-auth-files.js  settings-auth-gemini.js  settings-auth-iflow.js  settings-auth-qwen.js  settings-auth-vertex.js  settings-confirm.js  settings-core.js  settings-init.js  settings-ipc.js  settings-openai.js  settings-tabs.js  settings-update.js  settings-utils.js  settings.js  utils-zip.js
src-tauri/: Cargo.toml  prepare-web.js  tauri.conf.json  watch-web.js
src-tauri/capabilities/: main.json
src-tauri/permissions/: allow-app-commands.json  allow-app-commands.toml  open-login-window.json  open-settings-window.json  start-callback-server.json  start-cliproxyapi.json  stop-callback-server.json
src-tauri/src/: main.rs
